styles/index.css
/* ... */
.heart-count.animate i.mdi-heart {
  animation: heart-animation 0.9s ease-out;
}

.chat-container .message .share-overlay {
  font-size: 14px !important;
}

.chat-container .message .share-overlay .slack-share {
  margin-top: 12%;
}

.chat-container .message .share-overlay .slack-share i {
  cursor: pointer;
  opacity: 0.5;
  margin-left: 3px;
  transition: opacity 200ms ease-out;
}

.chat-container .message .share-overlay .slack-share i:hover {
  opacity: 0.7;
}

.chat-container .message .share-overlay .slack-share .slack-share-config {
  background: #eee;
  width: 65%;
  margin: -6px auto 15px;
  font-size: 0.85em;
  padding: 10px 0;
}

.chat-container .message .share-overlay label {
  margin:3.5% 0 4px;
  display: inline-block;
  font-size: 0.85em;
  color: #444;
}

.chat-container .message .share-overlay input {
  width: 90%;
  font-size:0.9em;
  margin:0px auto;
  padding: 4px 8px;
}

.room-title {
  display: block;
  /*border-bottom: 2px solid #eee;*/
  margin: 0 6px;
  position: relative;
}

.room-title a {
  font-size:12px;
  display: inline-block;
  font-weight: 600;
  margin: 20px 0 2px 0;
  text-decoration: none;
  background-color: #AB6B75;
  color: white;
  padding:1px;

  transition: background 200ms ease-out;
}

.room-title a {
  /*color: #333;*/
}

.room-title a:hover {
  color: #fff;
  background: #D896A0;
}

.room-title .connected-clients {
  padding: 1px;
  font-size: 11px;
/*      position: absolute;
  right: 0;
  bottom: 1px;
*/
  margin-left:3px;
  background-color: white;
  color: #222;
  font-weight: 600;
}

nav {
  background: #2F2A27;
  position: relative;
  text-align: center;
  font-size:0.75em;
  color: #B3AFB2;

  min-height: 34px;
}

nav .content a.typr {
  background-color: #AB6B75;
  color: white;
  text-decoration: none;
  font-weight: bold;
  transition: background 200ms ease-out;
}

nav .content a.typr:hover {
  background: #D896A0;
}

nav .content .subtitle,
.help a, .world-link a {
  color: #5F5E5E;
}

.help a:hover {
  color: #838384;
}

nav .title {
  line-height: 34px;
}

nav .pull-right {
  position: absolute;
  right: 8px;
}

nav .clients,
nav .room,
nav button {
  background: #424040;
  color: #eee;
  border-radius: 4px;
  padding: 4px 9px;
  font-size: 10px;
  font-weight: 600;
  margin: 6px 4px;
  display: inline-block;
}

nav button {
  cursor: pointer;
  background: #eee;
  color: #222;
  border: 0;
  border-bottom: 2px solid #aaa;
  transition: background 200ms ease-out;
}

nav button.active {
  background: #424040;
  color: #eee;
  border-bottom-color: #222;
}

nav button:hover {
  background: #cfcfcf;
}

nav button.active:hover {
  background: #323030;
}

nav button.subscribe-btn {
  position: relative;
  outline: 0;
  min-width: 75px;
  z-index:9;
}

nav button.subscribe-btn:after {
  position: absolute;
  top: 100%;
  left: -20%;
  width: 123%;
  margin-top: 10px;
  padding: 4px;
  color: #eee;
  background:#222;

}

nav button.subscribe-btn:hover:after {
  content: 'Subscribing means you\'ll see this room in the homepage. It\'s great!';
}


.notifications {
  position: absolute;
  text-align: center;
  display: block;
  top: 5%;
  width: 100%;
  z-index: 9999;
}

.notifications .message {
  position: relative;
  top: -400px;
  opacity: 0;
  font-size:12px;

  padding:3px 6px;

  transition: top 300ms ease-out,
              opacity 300ms ease-out;
}

.notifications .message.in {
  top: 0;
  opacity: 1;
}

.notifications .message.warn-message{
  background: yellow;
}

button {
  cursor: pointer;
}

button.btn-transparent {
  background: transparent;
  border: 0px;
  padding: 5px;
}

button.btn {
  margin: 10px auto;
  padding: 5px 22px;
  background-color: #999;
  color: white;
  border: 0px;
  border-top:2px solid transparent;
  border-bottom:2px solid #666;
  display: block;
  border-radius: 4px;
  font-weight: 500;
  font-size:.9em;
  outline: none;

  transition: background-color 80ms ease-out,
              border-bottom-color 80ms ease-out,
              color 80ms ease-out;
}

button.btn:hover {
  border-bottom-color: #444;
}

button.btn:active {
  border-top: 2px solid #666;
  background-color: #444;
  border-bottom-color: #444;
  top: 1px;
  position: relative;
}

.btn.btn-fb {
  background-color: #3b5998;
  border-bottom: 2px solid #283B65;
}

.btn.btn-fb:hover {
  border-bottom-color: #080D19;
}

.btn.btn-fb:active {
  border-top: 2px solid #3b5998;
  background-color: #283B65;
  border-bottom-color: #283B65;
}

.btn.btn-slack {
  color: black;
  background-color: white;
  border-bottom: 2px solid #ccc;
}

.btn.btn-slack:hover {
  border-bottom-color: #aaa;
}

.btn.btn-slack:active {
  border-top: 2px solid #dfdfdf;
  background-color: #ccc;
  border-bottom-color: #ccc;
}

.btn.btn-slack .slack-button-loading-text {
  display: none;
}

.btn.btn-slack.btn-disabled {
  background: #ccc !important;
  border-top-color: #ccc !important;
  border-bottom-color: #ccc !important;
  top: 0 !important;
}

.btn.btn-slack.btn-disabled .slack-button-share-text {
  display: none;
}

.btn.btn-slack.btn-disabled .slack-button-loading-text {
  display: inline-block;
}

.btn-slack-image {
  border-radius: 7px;
  border-bottom: 2px solid #ccc;
  transition: border-bottom-color 120ms ease-out;

}

.btn-slack-image:hover {
  border-bottom-color: #aaa;
}


.btn.btn-slack:active {
  border-bottom-color: #ccc;
}

/*    button.btn.btn-cta {
  background-color: #D896A0;
  border-bottom:2px solid #AB6B75;
}

button.btn.btn-cta:hover {
  border-bottom-color: #7D4E54;
}

button.btn.btn-cta:active {
  border-top: 2px solid #D896A0;
  background-color: #AB6B75;
  border-bottom-color: #AB6B75;
}*/

button.btn-large {
  min-width: 165px;
}

butotn.btn-primary {
  background: #999;
}

.pull-right {
  float: right;
}

.footer {
  position: absolute;
  bottom: 0;
  padding: 5px 10px 20px 10px;
  width:100%;
  background: #eee;
  font-size: 0.75em;
  color: #aaa;
}

.footer a {
  color: #787878;
}
/* ... */

